@@ -1,3 +1,9 @@
+2021-02-06  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* utils.c, configure.ac:
+	Show TeX Live version by version option.
+	Show bug report address in usage.
+
 2019-05-22  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
 
 	* bibtex-2.c, bibtex-3.c: Better error messages for debug.
